--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^3.9.4",
     "autoprefixer": "7.1.6",
     "axios": "^0.18.0",
     "bootstrap": "^4.4.1",
@@ -17,11 +16,12 @@
     "promise": "8.0.1",
     "raf": "3.4.0",
     "react": "^16.4.2",
-    "react-bootstrap": "^1.0.0-beta.5",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.4.2",
     "react-router-dom": "^4.3.1",
     "resolve": "1.6.0",
-    "url-loader": "0.6.2"
+    "url-loader": "0.6.2",
+    "whatwg-fetch": "^3.0.0"
   },
   "scripts": {
     "start": "node scripts/start.js",
